Fix walkthrough record button not appearing on smaller screen sizes

--- a/walkthrough_record_block.css
+++ b/walkthrough_record_block.css
@@ -143,8 +143,8 @@
   color: #3bb1d5;
 }
 
-@media all and (max-width: 1279px) {
+@media handheld {
   .block-walkhub-floating-record-button {
-  display: none;
+    display: none;
   }
 }
